--- a/Web.config
+++ b/Web.config
@@ -11,8 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MIS4200Team8-20200228042219.mdf;Initial Catalog=aspnet-MIS4200Team8-20200228042219;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=cob.ohio.edu;Initial Catalog=Profile-MIS4200Team8;Persist Security Info=True;User ID=MIS4200;Password=AI$database" providerName="System.Data.SqlClient"  />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
